--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -325,31 +325,30 @@
 
 <script id="settings_tmpl" type="text/x-handlebars-template">
     <div class="pane animated fadeInDown">
-
-        <div class="tabs-container">
-
-            <div class="tabs-left">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#setting-tab-1" aria-expanded="true">People</a></li>
-                    <li class=""><a data-toggle="tab" href="#setting-tab-2" aria-expanded="false">Notifications</a></li>
-                    <li class=""><a data-toggle="tab" href="#setting-tab-3" aria-expanded="false">General</a></li>
-                </ul>
-                <div class="tab-content ">
-                    <div id="setting-tab-1" class="tab-pane active">
-                        <div class="panel-body">
-                            <div class="section_title">Roles and Permissions</div>
-                            <div class="spacer"></div>
-                            <div id="role_table_holder"></div>
+        <div class="col-lg-12">
+            <div class="tabs-container">
+                <div class="tabs">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a data-toggle="tab" href="#setting-tab-1" aria-expanded="true">Roles & Permissions</a></li>
+                        <li class=""><a data-toggle="tab" href="#setting-tab-2" aria-expanded="false">Notifications</a></li>
+                        <li class=""><a data-toggle="tab" href="#setting-tab-3" aria-expanded="false">General</a></li>
+                    </ul>
+                    <div class="tab-content ">
+                        <div id="setting-tab-1" class="tab-pane active">
+                            <div class="panel-body">
+                                <div class="spacer"></div>
+                                <div id="role_table_holder"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div id="setting-tab-2" class="tab-pane">
-                        <div class="panel-body">
-                            <strong>General</strong>
+                        <div id="setting-tab-2" class="tab-pane">
+                            <div class="panel-body">
+                                <strong>General</strong>
+                            </div>
                         </div>
-                    </div>
-                    <div id="setting-tab-3" class="tab-pane">
-                        <div class="panel-body">
-                            <strong>Notifications</strong>
+                        <div id="setting-tab-3" class="tab-pane">
+                            <div class="panel-body">
+                                <strong>Notifications</strong>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -719,14 +718,17 @@
             <span class="label label-{{theme}}">{{initials}}</span>
         {{/each}}
     </div>
-    <div class="event_details">
+    <div class="event_details" event_id="{{id}}" event_title="{{title}}">
         <i title="Edit" class="edit-btn table-btn fa fa-edit"></i>
-        <div class="event_place_wrap">
+        <div class="event_details_place">
             {{place}}
         </div>
-        <div class="event_people_wrap">
+        <div class="event_details_description">
+            {{description}}
+        </div>
+        <div class="event_details_people">
             {{#each people}}
-                <span class="label label-{{theme}}">{{name}}</span>
+                <span class="event_details_person label label-{{theme}}">{{name}}</span>
             {{/each}}
         </div>
     </div>
