--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -128,9 +128,7 @@
                 <div class="vertical-timeline-content">
                     <h2>{{ title }} {{#not_undefined owner}}<span style="float: right; opacity: 0.4; font-size: 0.7em;">Created by {{ owner }}</span> {{/not_undefined}}</h2>
                     <p>
-                        {{ place }}
-                    </p>
-                    <p>
+                        <span class="timeline-place">{{ place }}</span> <br>
                         {{ description }}
                     </p>
                     <div class="timeline-people">
