--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -1,9 +1,11 @@
 <script id="planner_tmpl" type="text/x-handlebars-template">
     <div class="pane animated fadeInDown">
         <div id="calendar_wrap">
-            <button id="add_event_btn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#add_event_modal">
-                Add an Event
-            </button>
+            {{#perm 'edit_events'}}
+                <button id="add_event_btn" type="button" class="btn btn-primary" data-toggle="modal" data-target="#add_event_modal">
+                    Add an Event
+                </button>
+            {{/perm}}
             <div id="calendar_holder"></div>
         </div>
         <!--<div class="tabs-container">-->
@@ -30,62 +32,66 @@
             <div class="modal-content animated fadeIn">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h3 class="modal-title">Add an Event</h3>
+                    <h3 class="modal-title">Add Event</h3>
                 </div>
                 <div class="modal-body">
-                    <form id="add_event_form" event_id="" method="get" class="form-horizontal" data-toggle="validator">
-                        <div class="form-group"><label class="col-sm-2 control-label">Name</label>
-                            <div class="col-sm-10"><input id="add_event_name" type="text" placeholder="Daily Meeting" class="form-control input-lg req-input" required=""></div>
-                        </div>
-                        <div class="form-group"><label class="col-sm-2 control-label">Place</label>
-                            <div id="add_event_placepicker_wrapper" class="col-sm-10">
+                    <form id="add_event_form" event_id="" method="get" class="form-horizontal">
+                        <div class="col-lg-6">
+                            <div class="form-group"><label class="col-sm-2 control-label">Name</label>
+                                <div class="col-sm-10"><input tabindex="1" id="add_event_name" name="name" type="text" placeholder="Daily Meeting" class="input-lg form-control req-input"></div>
+                            </div>
+                            <div class="form-group"><label class="col-sm-2 control-label">Place</label>
+                                <div id="add_event_placepicker_wrapper" class="col-sm-10"></div>
+                            </div>
+                            <div class="form-group"><label class="col-sm-2 control-label">People</label>
+                                <div id="add_event_peoplepicker_wrapper" class="col-sm-10"></div>
+                            </div>
+                            <div class="form-group"><label style="position: relative; right: 5px;"class="col-sm-2 control-label">Description</label>
+                                <div class="col-sm-10"><textarea tabindex="4" id="add_event_description" type="text" name="description" placeholder="Meeting that we hold daily..." class="form-control input-lg"></textarea></div>
                             </div>
                         </div>
-                        <div class="form-group"><label class="col-sm-2 control-label">People</label>
-                            <div id="add_event_peoplepicker_wrapper" class="col-sm-10">
+                        <div class="col-lg-6">
+                            <div class="form-group" id="add_event_datepicker_start"><label class="col-sm-2 control-label">Start</label>
+                                <div class="col-sm-10">
+                                    <div class="input-group date">
+                                        <span class="input-group-addon">
+                                            <i class="fa fa-calendar"></i>
+                                        </span>
+                                        <input name="start_date" tabindex="5" type="text" class="input-lg form-control req-input-right" value="{{todayDate}}">
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group" id="add_event_datepicker_start"><label class="col-sm-2 control-label">Start</label>
-                            <div class="col-sm-10">
-                                <div class="input-group date">
-                                    <span class="input-group-addon">
-                                        <i class="fa fa-calendar"></i>
-                                    </span>
-                                    <input type="text" class="form-control" value="{{todayDate}}">
+                            <div class="form-group"><label class="col-sm-2 control-label"></label>
+                                <div class="col-sm-10">
+                                    <div id="add_event_clockpicker_start" class="input-group clockpicker" data-autoclose="true">
+                                        <span class="input-group-addon">
+                                            <span class="fa fa-clock-o"></span>
+                                        </span>
+                                        <input name="start_time" tabindex="6" type="text" class="input-lg form-control req-input-right" value="09:30">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group" id="add_event_datepicker_end"><label class="col-sm-2 control-label">End</label>
+                                <div class="col-sm-10">
+                                    <div class="input-group date">
+                                        <span class="input-group-addon">
+                                            <i class="fa fa-calendar"></i>
+                                        </span>
+                                        <input name="end_date" tabindex="7" type="text" class="input-lg form-control req-input-right" value="{{todayDate}}">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group"><label class="col-sm-2 control-label"></label>
+                                <div class="col-sm-10">
+                                    <div id="add_event_clockpicker_end" class="input-group clockpicker" data-autoclose="true">
+                                        <span class="input-group-addon">
+                                            <span class="fa fa-clock-o"></span>
+                                        </span>
+                                        <input name="end_time" tabindex="8" type="text" class="input-lg form-control req-input-right" value="09:30">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group"><label class="col-sm-2 control-label"></label>
-                            <div class="col-sm-10">
-                                <div id="add_event_clockpicker_start" class="input-group clockpicker" data-autoclose="true">
-                                    <span class="input-group-addon">
-                                        <span class="fa fa-clock-o"></span>
-                                    </span>
-                                    <input type="text" class="form-control" value="09:30" >
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group" id="add_event_datepicker_end"><label class="col-sm-2 control-label">End</label>
-                            <div class="col-sm-10">
-                                <div class="input-group date">
-                                    <span class="input-group-addon">
-                                        <i class="fa fa-calendar"></i>
-                                    </span>
-                                    <input type="text" class="form-control" value="{{todayDate}}">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group"><label class="col-sm-2 control-label"></label>
-                            <div class="col-sm-10">
-                                <div id="add_event_clockpicker_end" class="input-group clockpicker" data-autoclose="true">
-                                    <span class="input-group-addon">
-                                        <span class="fa fa-clock-o"></span>
-                                    </span>
-                                    <input type="text" class="form-control" value="09:30" >
-                                </div>
-                            </div>
-                        </div>
-
                         <div class="form-group modal-footer-buttons">
                             <button id="modal_add_event" type="submit" class="btn btn-primary">Add</button>
                             <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
@@ -225,18 +231,18 @@
     <div id="account_pane" class="pane animated fadeInDown">
         <div class="col-md-6">
             <h3 class="account-header"> Account </h3>
-            <form id="account_info_form" place_id="" class="form-horizontal" data-toggle="validator">
+            <form id="account_info_form" place_id="" class="form-horizontal">
                 <div class="form-group">
                     <label class="col-md-2">Name</label>
                     <div class="col-md-8">
-                      <input id="account_name" type="text" class="form-control input-lg req-input" required="">
+                      <input id="account_name" name="name" type="text" class="form-control input-lg req-input">
                     </div>
                     <label class="col-md-2"></label>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2">Phone</label>
                     <div class="col-md-8">
-                        <input id="account_phone" type="text" placeholder="01-1234567" class="form-control input-lg"></input>
+                        <input id="account_phone" name="phone" type="text" placeholder="01-1234567" class="form-control input-lg"></input>
                     </div>
                     <label class="col-md-2"></label>
                 </div>
@@ -250,7 +256,7 @@
                 <div class="form-group">
                     <label class="col-md-2"></label>
                     <div class="col-md-8">
-                        <button id="update_account_btn" type="submit" class="btn btn-primary">Update Details</button>
+                        <button id="update_account_btn" class="btn btn-primary">Update Details</button>
                     </div>
                     <label class="col-md-2"></label>
                 </div>
@@ -367,7 +373,7 @@
                         <div class="form-group"><label class="col-sm-3 control-label">Address</label>
                             <div class="col-sm-9"><input id="add_place_address" type="text" placeholder="22 Main Street" class="form-control input-lg req-input" required=""></input></div>
                         </div>
-                        <div class="form-group"><label class="col-sm-3 control-label">Contect Email</label>
+                        <div class="form-group"><label class="col-sm-3 control-label">Contact Email</label>
                             <div class="col-sm-9"><input id="add_place_email" type="email" placeholder="joebloggs@mail.com" class="form-control input-lg"></div>
                         </div>
                         <div class="form-group"><label class="col-sm-3 control-label">Contact Phone</label>
@@ -471,12 +477,12 @@
                     <h3 class="modal-title">Add a Person</h3>
                 </div>
                 <div class="modal-body">
-                    <form id="add_person_form" person_id="" method="get" class="form-horizontal" data-toggle="validator">
+                    <form id="add_person_form" person_id="" method="get" class="form-horizontal">
                         <div class="form-group"><label class="col-sm-2 control-label">Name</label>
-                            <div class="col-sm-10"><input id="add_person_name" type="text" placeholder="Joe Bloggs" class="form-control input-lg req-input" required=""></div>
+                            <div class="col-sm-10"><input id="add_person_name" type="text" placeholder="Joe Bloggs" class="form-control input-lg req-input"></div>
                         </div>
                         <div class="form-group"><label class="col-sm-2 control-label">Email</label>
-                            <div class="col-sm-10"><input id="add_person_email" type="email" placeholder="jb@mail.com" class="form-control input-lg req-input" required=""></div>
+                            <div class="col-sm-10"><input id="add_person_email" type="email" placeholder="jb@mail.com" class="form-control input-lg req-input"></div>
                         </div>
                         <div id="add_person_invite_box" class="form-group">
                             <div class="col-sm-10 pull-right">
@@ -518,7 +524,7 @@
         <tr class="place_row" place_id="{{ _id }}">
             <td class="place_name">{{name}}</td>
             <td class="place_address">{{#if address}} {{address}} {{else}} <span class="placeholder-text">Unknown</span> {{/if}}</td>
-            <td class="place_mail">{{#if mail}} {{mail}} {{else}} <span class="placeholder-text">Unknown</span> {{/if}}</td>
+            <td class="place_mail">{{#if email}} {{email}} {{else}} <span class="placeholder-text">Unknown</span> {{/if}}</td>
             <td class="place_phone">{{#if phone}} {{phone}} {{else}} <span class="placeholder-text">Unknown</span> {{/if}}</td>
             <td>
                 <!--<i place_id="{{_id}}" title="Show on Map" class="map-btn table-btn fa fa-map-marker"></i>-->
@@ -536,7 +542,7 @@
         <tr class="person_row" person_id="{{_id}}">
             <!--<td>{{> checkbox_part}}</td>-->
             <td class="person_name">{{name}}</td>
-            <td class="person_email">{{#if mail}} {{mail}} {{else}} <span class="placeholder-text">Unknown</span> {{/if}}</td>
+            <td class="person_email">{{#if email}} {{email}} {{else}} <span class="placeholder-text">Unknown</span> {{/if}}</td>
             <td class="person_phone">{{#if phone}} {{phone}} {{else}} <span class="placeholder-text">Unknown</span> {{/if}}</td>
             <td><span role_theme="{{role_theme}}" class="person_role label label-{{role_theme}}">{{role_name}}</span></td>
             <td>
@@ -546,13 +552,13 @@
                     {{else}}
                         <span class="badge badge-warning">Invitation Pending</span>
                         {{#perm 'edit_people'}}
-                            <i person_id="{{_id}}" mail="{{mail}}" title="Resend Invitation" class="invite-btn table-btn fa fa-reply"></i>
+                            <i person_id="{{_id}}" email="{{email}}" title="Resend Invitation" class="invite-btn table-btn fa fa-reply"></i>
                         {{/perm}}
                     {{/if}}
                 {{else}}
                     <span class="placeholder-text badge">No Invite Sent</span>
                     {{#perm 'edit_people'}}
-                        <i person_id="{{_id}}" mail="{{mail}}" title="Send Invitation" class="invite-btn table-btn fa fa-reply"></i>
+                        <i person_id="{{_id}}" email="{{email}}" title="Send Invitation" class="invite-btn table-btn fa fa-reply"></i>
                     {{/perm}}
                 {{/if}}
             </td>
@@ -734,8 +740,8 @@
 </script>
 
 <script id="single_select_tmpl" type="text/x-handlebars-template">
-    <select id="{{ id }}" class="form-control">
-        <option></option>
+    <select id="{{ id }}" tabindex="{{ tabindex }}" data-placeholder="{{ placeholder }}" class="chosen-select req-input" style="width: 350px;">
+        <option class="chosen-placeholder" value="">{{ placeholder }}</option>
         {{#each options}}
             <option value="{{ _id }}">{{ name }}</option>
         {{/each}}
@@ -743,7 +749,7 @@
 </script>
 
 <script id="multi_select_tmpl" type="text/x-handlebars-template">
-    <select id="{{ id }}" class="form-control" multiple="multiple">
+    <select id="{{ id }}" tabindex="{{ tabindex }}" data-placeholder="{{ placeholder }}" class="chosen-select" multiple style="width: 350px;">
         {{#each options}}
             <option value="{{ _id }}">{{ name }}</option>
         {{/each}}
@@ -755,6 +761,10 @@
         <input {{#if id}}id="{{id}}"{{/if}} type="checkbox" {{#if checked}}checked=""{{/if}} value="" style="position: absolute; opacity: 0;">
         <ins class="iCheck-helper" style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins>
     </div> <i></i> {{label}} </label></div>
+</script>
+
+<script id="value_error_tmpl" type="text/x-handlebars-template">
+    <div class='val_error animated fadeInLeft'>{{ warning }}<i class="fa fa-asterisk"></i></div>
 </script>
 
 <script id="radio_button_tmpl" type="text/x-handlebars-template">
@@ -779,40 +789,17 @@
             <span class="label label-{{theme}}">{{initials}}</span>
         {{/each}}
     </div>
-    <div class="event_details" event_id="{{id}}" event_title="{{title}}">
-        <i title="Edit" class="edit-btn table-btn fa fa-edit"></i>
-        <div class="event_details_place">
-            {{place}}
-        </div>
+    <div class="event_place">
+        {{place}}
+    </div>
+    <div class="event_details" event_place="{{place}}" event_id="{{id}}" event_title="{{title}}" event_start="{{start}}" event_end={{end}}>
         <div class="event_details_description">
-            {{description}}
+            <span>{{description}}</span>
         </div>
         <div class="event_details_people">
             {{#each people}}
-                <span class="event_details_person label label-{{theme}}">{{name}}</span>
+                <span person_id="{{id}}" class="event_details_person label label-{{theme}}">{{name}}</span>
             {{/each}}
-        </div>
-    </div>
-</script>
-
-<script id="event_tip_tmpl" type="text/x-handlebars-template">
-    <div class="event_tip">
-        <div class="event_title">{{title}}</div>
-        <div class="event_body">
-            <div class="event_time">{{start_string}} - {{end_string}}</div>
-            <div>
-                {{place}}
-            </div>
-            <div class="event_people_wrap">
-                {{#each people}}
-                    <span class="label label-{{theme}}">{{name}}</span>
-                {{/each}}
-            </div>
-        </div>
-        <div class="event_footer">
-            <div class="event_edit">
-                <a href="#">Edit</a>
-            </div>
         </div>
     </div>
 </script>
