--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -134,7 +134,7 @@
                 <div class="vertical-timeline-content">
                     <h2>{{ title }} {{#not_undefined owner}}<span style="float: right; opacity: 0.4; font-size: 0.7em;">Created by {{ owner }}</span> {{/not_undefined}}</h2>
                     <p>
-                        <span class="timeline-place">{{ place }}</span> <br>
+                        <span class="timeline-place">{{ place.name }}</span> <br>
                         {{ description }}
                     </p>
                     <div class="timeline-people">
@@ -794,7 +794,7 @@
             {{ place.name }}
         {{/not_undefined}}
     </div>
-    <div class="event_details" event_place="{{place}}" event_id="{{id}}" event_title="{{title}}" event_start="{{start}}" event_end={{end}}>
+    <div class="event_details" event_place="{{place.id}}" event_id="{{id}}" event_title="{{title}}" event_start="{{start}}" event_end={{end}}>
         <div class="event_details_description">
             <span>{{description}}</span>
         </div>
