--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -94,6 +94,7 @@
                         </div>
                         <div class="form-group modal-footer-buttons">
                             <button id="modal_add_event" type="submit" class="btn btn-primary">Add</button>
+                            <button id="modal_delete_event" class="btn btn-danger">Delete</button>
                             <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
                         </div>
                     </form>
