--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -496,17 +496,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Role</label>
                             <div id="add_person_type_choice" class="col-sm-10">
-                                <div class="dropup">
-                                    <button class="btn btn-default dropdown-toggle" type="button" id="role_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <span id="role_dropdown_value" class="themed"></span>
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul id="role_dropdown_choice" class="slim-dropdown-menu dropdown-menu" aria-labelledby="role_dropdown">
-                                        {{#each roles}}
-                                            <li><a class="themed themed-{{ theme }}" role_theme="{{ theme }}" role_name="{{ name }} "role_id="{{_id}}"> {{ name }}</a></li>
-                                        {{/each}}
-                                    </ul>
-                                </div>
+                                <div id="add_person_rolepicker_wrapper" class="req-input"></div>
                             </div>
                         </div>
                         <div class="form-group modal-footer-buttons">
