--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -398,8 +398,8 @@
                 <div class="tabs">
                     <ul class="nav nav-tabs">
                         <li class="active"><a data-toggle="tab" href="#setting-tab-1" aria-expanded="true">Roles & Permissions</a></li>
-                        <li class=""><a data-toggle="tab" href="#setting-tab-2" aria-expanded="false">Notifications</a></li>
-                        <li class=""><a data-toggle="tab" href="#setting-tab-3" aria-expanded="false">General</a></li>
+                        <li class=""><a data-toggle="tab" href="#setting-tab-2" aria-expanded="false">Coming Soon</a></li>
+                        <li class=""><a data-toggle="tab" href="#setting-tab-3" aria-expanded="false">Coming Soon</a></li>
                     </ul>
                     <div class="tab-content ">
                         <div id="setting-tab-1" class="tab-pane active">
