--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -398,8 +398,8 @@
                 <div class="tabs">
                     <ul class="nav nav-tabs">
                         <li class="active"><a data-toggle="tab" href="#setting-tab-1" aria-expanded="true">Roles & Permissions</a></li>
-                        <li class=""><a data-toggle="tab" href="#setting-tab-2" aria-expanded="false">Coming Soon</a></li>
-                        <li class=""><a data-toggle="tab" href="#setting-tab-3" aria-expanded="false">Coming Soon</a></li>
+                        <li class=""><a data-toggle="tab" href="#setting-tab-2" aria-expanded="false">Notifications</a></li>
+                        <li class=""><a data-toggle="tab" href="#setting-tab-3" aria-expanded="false">General</a></li>
                     </ul>
                     <div class="tab-content ">
                         <div id="setting-tab-1" class="tab-pane active">
@@ -410,12 +410,12 @@
                         </div>
                         <div id="setting-tab-2" class="tab-pane">
                             <div class="panel-body">
-                                <strong>General</strong>
+                                <strong>Coming Soon</strong>
                             </div>
                         </div>
                         <div id="setting-tab-3" class="tab-pane">
                             <div class="panel-body">
-                                <strong>Notifications</strong>
+                                <strong>Coming Soon</strong>
                             </div>
                         </div>
                     </div>
