--- a/flock/static/hb_templates/templates.html
+++ b/flock/static/hb_templates/templates.html
@@ -114,7 +114,7 @@
                     <i class="fa fa-calendar fa-5x"></i>
                 </div>
                 <div class="col-xs-8 text-right">
-                    <div>No upcoming Events! </div> <br/>
+                    <div>You have no upcoming Events! </div> <br/>
                     <h3>
                         <a href="#planner" onclick="$('.tab[target=planner]').click()">
                             Add some now
@@ -219,7 +219,7 @@
     <div class="pane animated fadeInDown">
         <div class="" id="ibox-content">
             <div id="upcoming-timeline-wrapper" class="col-lg-8">
-                <h3 class="dashboard-header dashboard-header-events"> Upcoming Events </h3>
+                <h3 class="dashboard-header dashboard-header-events"> Your Upcoming Events </h3>
             </div>
             <div id="notifications-wrapper" class="col-lg-4">
                 <h3 class="dashboard-header"> Notifications </h3>
